@@ -19,12 +19,10 @@
 
 -server
 -Xmx16G
--XX:+UseG1GC
--XX:G1HeapRegionSize=32M
+-XX:+UseZGC
 -XX:+UseGCOverheadLimit
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:+ExitOnOutOfMemoryError
 -Dpresto-temporarily-allow-java8=true
 -Djdk.attach.allowAttachSelf=true
--javaagent:java-version-trim-agent.jar
